--- a/lms/users/templates/manager/manage_user.html
+++ b/lms/users/templates/manager/manage_user.html
@@ -169,6 +169,29 @@
                 Generate Reports
             </a>
         </div>
+
+        <!-- Unlock Accounts -->
+        <div class="bg-white rounded-lg shadow-md p-6 text-center">
+            <div class="text-3xl font-bold text-red-600 mb-2">
+                <svg class="w-12 h-12 mx-auto text-red-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 11V7a4 4 0 118 0m-4 8v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2z"></path>
+                </svg>
+            </div>
+            <div class="text-sm text-gray-600 mb-4">Unlock Accounts</div>
+            <div class="flex flex-col space-y-2">
+                <a href="{% url 'users:unlock_accounts' %}" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-lg text-sm font-medium transition duration-200">
+                    Manage Locked Accounts
+                </a>
+                {% if locked_accounts > 0 %}
+                <span class="text-xs text-red-600 font-medium">
+                    <svg class="w-3 h-3 inline mr-1" fill="currentColor" viewBox="0 0 20 20">
+                        <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd"></path>
+                    </svg>
+                    {{ locked_accounts }} accounts locked
+                </span>
+                {% endif %}
+            </div>
+        </div>
     </div>
 
     
